# cqhttp-cpplib

./: .gitignore  CMakeLists.txt  README.md  cqhttp.hpp
include/: Bot.hpp  Msg.hpp
include/json/: CMakeLists.txt
src/: Bot.cpp  Msg.cpp
